--- a/html/nginxConf.conf
+++ b/html/nginxConf.conf
@@ -52,7 +52,7 @@ http {
 
 		server {
 			client_max_body_size 	20M;	    
-      server_name  ec2-54-210-190-65.compute-1.amazonaws.com;
+      server_name  54.210.190.65;
       root         /var/www/html;
 
       # Load configuration files for the default server block.
@@ -171,13 +171,5 @@ http {
 		    add_header Cache-Control "max-age=31536000, public, must-revalidate, proxy-revalidate";
 			}	
     }
-		
-    server {
-			client_max_body_size 20M;	   	    
-      server_name  dev.brain.do;
-      root         /var/www/html;
-
-      # Load configuration files for the default server block.
-      include /etc/nginx/default.d/*.conf;
-      include /var/www/html/nginx.conf;   
+  }  
 }
