--- a/html/nginxConf.conf
+++ b/html/nginxConf.conf
@@ -64,12 +64,12 @@ http {
         # Redirect
         set $redirect 0;
 
-        if ($http_x_forwarded_proto != "https") {
+        if ($http_x_forwarded_proto != "http") {
           set $redirect 1;
         }
 
 				if ($redirect = 1) {
-          rewrite ^(.*)$ https://$server_name$1 permanent;
+          rewrite ^(.*)$ http://$server_name$1 permanent;
         }
 
 				index index.php;
