--- a/html/nginxConf.conf
+++ b/html/nginxConf.conf
@@ -64,7 +64,7 @@ http {
         # Redirect
         set $redirect 0;
 
-        if ($http_x_forwarded_proto != "http") {
+        if ($http_x_forwarded_proto != "https") {
           set $redirect 1;
         }
 
