breaking nginxConf.conf most likely.

--- a/html/nginxConf.conf
+++ b/html/nginxConf.conf
@@ -58,6 +58,11 @@ http {
       # Load configuration files for the default server block.
       include /etc/nginx/default.d/*.conf;
       include /var/www/html/nginx.conf;
+      
+      location / {  
+  			index index.php;
+        try_files $uri $uri/ /index.php?$args;
+      }
 
       # redirect server error pages to the static page /40x.html
       #
